// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <InputText /> renders 1`] = `
<DocumentFragment>
  <input
    class="input input-bordered input-primary input-md test"
    data-testid="InputText"
  />
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputText Input Text Color Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        accent
      </span>
    </label>
    <input
      className="input input-bordered input-accent input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        error
      </span>
    </label>
    <input
      className="input input-bordered input-error input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        ghost
      </span>
    </label>
    <input
      className="input input-bordered input-ghost input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        info
      </span>
    </label>
    <input
      className="input input-bordered input-info input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        primary
      </span>
    </label>
    <input
      className="input input-bordered input-primary input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        secondary
      </span>
    </label>
    <input
      className="input input-bordered input-secondary input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        success
      </span>
    </label>
    <input
      className="input input-bordered input-success input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        warning
      </span>
    </label>
    <input
      className="input input-bordered input-warning input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputText Input Text Example 1`] = `
<input
  className="input input-bordered input-primary input-md"
  data-testid="InputText"
  placeholder="type here..."
/>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputText Input Text Size Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        lg
      </span>
    </label>
    <input
      className="input input-bordered input-primary input-lg"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        md
      </span>
    </label>
    <input
      className="input input-bordered input-primary input-md"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        sm
      </span>
    </label>
    <input
      className="input input-bordered input-primary input-sm"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        xs
      </span>
    </label>
    <input
      className="input input-bordered input-primary input-xs"
      data-testid="InputText"
      placeholder="type here..."
    />
  </div>,
]
`;
